<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Restra</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <!-- Authorization -->
    <string name="parameter_auth">a2665f0923b4b497f2bb4e3017ec27df</string>
    <string name="warning_no_internet">No Internet found. Please enable mobile data or wifi</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="search">Search</string>

    <string-array name="nav_drawer_labels">
        <item>@string/search_dashboard_fragment</item>
        <item>@string/list_restaurants</item>
    </string-array>

    <!-- dashboard fragment -->
    <string name="search_dashboard_fragment">Search</string>
    <string name="search_text_dashboard_fragment">Search by area &amp; name</string>
    <string name="list_restaurants">Restaurants</string>
    <string name="list_restaurants_text">List all the restaurants</string>


    <!--Search-->
    <string name="search_restaurant_name">Restaurant Name</string>
    <string name="search_restaurant_address">Address</string>
    <string name="search_restaurant_area">Area</string>
    <string name="search_restaurant_rates">Rates</string>

    <!--Restaurant Information-->
    <string name="restaurant_info">Restaurant Info</string>
    <string name="restaurant_location">Restaurant Location</string>
    <string name="title_activity_image">ImageActivity</string>
    <string name="restaurnat_cost">Cost</string>
    <string name="restaurnat_menu">Menu</string>
    <string name="restaurnat_cuisine">Cuisines</string>
    <string name="restaurnat_tag">Tags</string>

    <!--warning erro messages-->
    <string name="error_network_connection">No internet or some network problem occur.</string>
    <string name="error_webservice_response_message">message</string>
</resources>
