<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="5dp"
    android:layout_marginBottom="5dp"
    card_view:cardCornerRadius="4dp"
    card_view:cardElevation="10dp"
    card_view:cardBackgroundColor="@color/white">

    <LinearLayout
        android:id="@+id/layout_cardview_search"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView_searchItem"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_weight="0"
        android:scaleType="fitXY"
        android:src="@drawable/image_uploading"
        android:background="#aa000000"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_weight="0"
        android:padding="10dp"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical" >

            <com.clairvoyant.Components.TextViewRegular
                android:id="@+id/searchResultItem_textview_name"
                style="@style/textview.14sp.black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/search_restaurant_name" />

            <com.clairvoyant.Components.TextViewRegular
                android:id="@+id/searchResultItem_textview_address"
                style="@style/textview.12sp.black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/search_restaurant_address" />

            <com.clairvoyant.Components.TextViewRegular
                android:id="@+id/searchResultItem_textview_area"
                style="@style/textview.12sp.black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text="@string/search_restaurant_area"
                android:ellipsize="end"
                android:singleLine="true" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical" >
            <com.clairvoyant.Components.TextViewRegular
                android:id="@+id/searchResultItem_textview_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textColor="@color/primary_color"
                android:textSize="14sp"
                android:gravity="right"
                android:text="@string/search_restaurant_rates" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="@color/gray_drawer"
        android:visibility="gone"/>
    </LinearLayout>
</android.support.v7.widget.CardView>