<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.clairvoyant.restra.Fragments.DasboardFragment"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:scaleType="fitXY"
        android:src="@drawable/main_image" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:layout_margin="5dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:background="@color/layout_background">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_margin="5dp"
                android:src="@drawable/ic_search_black_48dp"
                android:layout_weight="0" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <com.clairvoyant.Components.TextViewRegular
                    style="@style/textview.bold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/search_dashboard_fragment"/>

                <com.clairvoyant.Components.TextViewRegular
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/search_text_dashboard_fragment"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:background="@color/layout_background">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_margin="5dp"
                android:src="@drawable/ic_list_black_48dp"
                android:layout_weight="0" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <com.clairvoyant.Components.TextViewRegular
                    style="@style/textview.bold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/list_restaurants" />

                <com.clairvoyant.Components.TextViewRegular
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/list_restaurants_text" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
