<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    android:orientation="vertical">

    <com.clairvoyant.Components.VerticalScrollView
        android:id="@+id/scrollView_restraDetails"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView_restraImage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="left|top"
                android:layout_margin="5dp"
                android:layout_weight="1.5"
                android:scaleType="fitXY"
                android:src="@drawable/image_uploading"
                android:visibility="gone" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <android.support.v4.view.ViewPager
                    android:id="@+id/viewPager_images"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:layout_weight="0"></android.support.v4.view.ViewPager>

                <com.viewpagerindicator.CirclePageIndicator
                    android:id="@+id/circlePageIndicator"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginBottom="20dp"
                    app:fillColor="#FF888888"
                    app:pageColor="#88FF0000"
                    app:strokeColor="#00000000"
                    app:paddingStart="10dip"
                    app:paddingEnd="20dip"/>
            </FrameLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <android.support.v7.widget.CardView
                    style="@style/cardview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    card_view:cardBackgroundColor="@color/white"
                    card_view:cardElevation="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <com.clairvoyant.Components.TextViewRegular
                            style="@style/textview.bold"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/search_restaurant_address" />

                        <com.clairvoyant.Components.TextViewRegular
                            android:id="@+id/textview_restraDetails_address"
                            style="@style/textview.14sp.black"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/search_restaurant_address" />

                        <com.clairvoyant.Components.TextViewRegular
                            android:id="@+id/textview_restraDetails_area"
                            style="@style/textview.14sp.black"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/search_restaurant_area" />
                    </LinearLayout>
                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    style="@style/cardview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    card_view:cardBackgroundColor="@color/white"
                    card_view:cardElevation="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <com.clairvoyant.Components.TextViewRegular
                            style="@style/textview.bold"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/restaurnat_cost" />

                        <com.clairvoyant.Components.TextViewRegular
                            android:id="@+id/textview_restraDetails_cost"
                            style="@style/textview.14sp.black"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/restaurnat_cost" />
                    </LinearLayout>
                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    style="@style/cardview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    card_view:cardBackgroundColor="@color/white"
                    card_view:cardElevation="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <com.clairvoyant.Components.TextViewRegular
                            style="@style/textview.bold"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/restaurnat_cuisine" />

                        <com.clairvoyant.Components.TextViewRegular
                            android:id="@+id/textview_restraDetails_cuisines"
                            style="@style/textview.14sp.black"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/restaurnat_cuisine" />

                        <com.clairvoyant.Components.TextViewRegular
                            style="@style/textview.bold"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/restaurnat_tag" />

                        <LinearLayout
                            android:id="@+id/layout_restraDetails_tags"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:orientation="vertical">

                        </LinearLayout>
                    </LinearLayout>
                </android.support.v7.widget.CardView>

            </LinearLayout>
        </LinearLayout>
    </com.clairvoyant.Components.VerticalScrollView>

</LinearLayout>